small changes related to forgot password.

--- a/src/authentication/authentication.html
+++ b/src/authentication/authentication.html
@@ -108,8 +108,10 @@
           <input type="email" id="email" name="email" placeholder="Username / Email">
         </div>
         <div class="d-flex flex-direction-column align-items-center">
-          <button class="btn continue-btn" type="submit" onclick="login(email)">Continue</button>
+          <button class="btn continue-btn" type="submit" onclick="resetPassword()">Continue</button>
           </br>
+          <p>Changed your mind? <span style="cursor: pointer; font-weight: 500; color: var(--primary-bg-1);"
+            onclick="showLogin()">Click</span> here to Login</p>
         </div>
       </form>
     </div>
