--- a/src/ContactUs/contactUs.html
+++ b/src/ContactUs/contactUs.html
@@ -100,5 +100,33 @@
       </div>
     </div>
   </div>
+
+  <!-- Footer - Aravind -->
+  <section class="footer">
+   
+
+    <ul class="list">
+      <li>
+        <a href="#">Home</a>
+      </li>
+      <li>
+        <a href="#">About</a>
+      </li>
+      <li>
+        <a href="#">Services</a>
+      </li>
+      <li>
+        <a href="#">Terms</a>
+      </li>
+      <li>
+        <a href="#">Privacy Policy</a>
+      </li>
+    </ul>
+
+    <p class ="copyright">
+     Copyright  Mercado Escolar Kosana_Kumar_Manikandan @2022
+    </p>
+  </section>
+  
 </body>
 </html>
