--- a/src/Services/services.html
+++ b/src/Services/services.html
@@ -92,5 +92,33 @@
     <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">We do Pickup / Delivery</p></div>
     <div class="services-text"><p >Explore our Services</p></div>
   </div>
+
+   <!-- Footer - Aravind -->
+   <section class="footer">
+   
+
+    <ul class="list">
+      <li>
+        <a href="#">Home</a>
+      </li>
+      <li>
+        <a href="#">About</a>
+      </li>
+      <li>
+        <a href="#">Services</a>
+      </li>
+      <li>
+        <a href="#">Terms</a>
+      </li>
+      <li>
+        <a href="#">Privacy Policy</a>
+      </li>
+    </ul>
+
+    <p class ="copyright">
+     Copyright  Mercado Escolar Kosana_Kumar_Manikandan @2022
+    </p>
+  </section>
+  
   </body>
   </html>
