--- a/src/Services/services.html
+++ b/src/Services/services.html
@@ -76,8 +76,8 @@
   <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:30%;"> 
     <div class="responsive"><img src="../../assets/images/laundry.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
     <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Get your clothes washed and delivered in no time.</p></div>
-    <div class="services-text"><p >No more wait times. No more hassle. Do your laundry at ease with Mercado Escolar.</br>
-      Your one-stop solution for getting your clothes washed, dried , ironed and delivered at your doorstep.</p></div>
+    <div class="services-text"><p >No </br>
+      Your .</p></div>
   </div>
   <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:30%;"> 
     <div class="responsive"><img src="../../assets/images/laundry-women.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
