--- a/src/Services/services.html
+++ b/src/Services/services.html
@@ -75,13 +75,13 @@
 <div class="flex-container">
   <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:30%;"> 
     <div class="responsive"><img src="../../assets/images/laundry.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
-    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Get your clothes washed and delivered in no time.</p></div>
-    <div class="services-text"><p >No </br>
+    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Service 1.</p></div>
+    <div class="services-text"><p >services are listed here</br>
       Your .</p></div>
   </div>
   <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:30%;"> 
     <div class="responsive"><img src="../../assets/images/laundry-women.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
-    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">We Wash, Dry and Iron your clothes</p></div>
+    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Service 2</p></div>
     <div class="services-text"><p >Care and quality are the core values of Mercado Escolar dry cleaning and laundry
       service.</br>
       Our mission is to provide consistent, quality clothing care with a level of service that exceeds your
@@ -89,7 +89,7 @@
   </div>
   <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:30%;"> 
     <div class="responsive"><img src="../../assets/images/pickup-delivery.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
-    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">We do Pickup / Delivery</p></div>
+    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Service 3</p></div>
     <div class="services-text"><p >Explore our Services</p></div>
   </div>
 </div>
