--- a/src/authentication/authentication.html
+++ b/src/authentication/authentication.html
@@ -17,14 +17,14 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
   <!-- Add title and favicon -->
-  <title>InstaWash</title>
+  <title>Mercado Escolar</title>
   <link rel="icon" href="./assets/images/outline_local_laundry_service_white_24dp.png" type="image/x-icon">
 </head>
 
 <body>
   <!-- navigation header section -->
   <header class="d-flex justify-between nav-header">
-    <div class="header-title d-flex"><a class="logo font-oswald" href="../../index.html">InstaWash</a></div>
+    <div class="header-title d-flex"><a class="logo font-oswald" href="../../index.html">Mercado Escolar</a></div>
     <nav class="navbar">
       <ul class="d-flex justify-around flex-direction-row">
         <li class="nav-item">
@@ -54,7 +54,7 @@
   <!-- side menu navigation for responsiveness -->
   <header class="d-flex justify-between menu-header" style="display: none;">
     <div class="header-title d-flex justify-between"><img class="logo font-oswald cursor-pointer" src="../../assets/images/hmaburger-menu.png" height="45px" width="45px" onclick="showSideNav()"> 
-      <div class="header-title d-flex"><a class="logo font-oswald" href="../../index.html">InstaWash</a></div></div>
+      <div class="header-title d-flex"><a class="logo font-oswald" href="../../index.html">Mercado Escolar</a></div></div>
     <div class="side-bar-navigation fade" id="side-bar-navigation">
       <ul>
         <li><a href="../../index.html">Home</a></li>
