--- a/src/Services/services.html
+++ b/src/Services/services.html
@@ -94,6 +94,28 @@
   </div>
 </div>
 
+<div class="flex-container">
+  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:30%;"> 
+    <div class="responsive"><img src="../../assets/images/laundry.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Order 1.</p></div>
+    <div class="services-text"><p >services are listed here</br>
+      Your .</p></div>
+  </div>
+  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:30%;"> 
+    <div class="responsive"><img src="../../assets/images/laundry-women.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Order 2</p></div>
+    <div class="services-text"><p >Care and quality are the core values of Mercado Escolar dry cleaning and laundry
+      service.</br>
+      Our mission is to provide consistent, quality clothing care with a level of service that exceeds your
+      expectations</p></div>
+  </div>
+  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:30%;"> 
+    <div class="responsive"><img src="../../assets/images/pickup-delivery.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Order 3</p></div>
+    <div class="services-text"><p >Explore our Services</p></div>
+  </div>
+</div>
+
    <!-- Footer - Aravind -->
    <section class="footer">
    
