--- a/src/Manager/manager.html
+++ b/src/Manager/manager.html
@@ -24,7 +24,7 @@
 <body class="d-flex flex-direction-column">
     <!-- Header element conatining navigation bar and links -->
     <header class="d-flex justify-between nav-header">
-        <div class="header-title d-flex"><a class="logo font-oswald" href="../../index.html">InstaWash</a></div>
+        <div class="header-title d-flex"><a class="logo font-oswald" href="../../index.html">Mercado Escolar</a></div>
         <nav class="navbar">
             <ul class="d-flex justify-around flex-direction-row">
                 <li class="nav-item">
