--- a/index.html
+++ b/index.html
@@ -41,10 +41,19 @@
         <li class="nav-item">
           <a class="nav-link" href="./src/authentication/authentication.html">Login/Register</a>
         </li>
-        <form class="form-inline search-control  d-flex align-items-center">
+        <li>
+          <div id="tray">
+            <div class="count">
+            
+            </div>
+            <a href="./src/Payment/payment.html">
+          <i class="fa fa-shopping-basket fa-2x" aria-hidden="true"></i></a>
+           </div>
+        </li>
+       <!-- <form class="form-inline search-control  d-flex align-items-center">
           <input class="form-control" type="search" placeholder="Search" aria-label="Search">
           <button class="btn" type="submit">Search</button>
-        </form>
+        </form> -->
       </ul>
     </nav>
   </header>
