content change in homepage

--- a/index.html
+++ b/index.html
@@ -79,21 +79,20 @@
     <div class="poster d-flex justify-around">
       <img src="./assets/images/laundry.png" height="400" width="400">
       <div class="d-flex flex-direction-column justify-center">
-        <p class="font-oswald text-header">Get your clothes washed and delivered in no time.</p>
-        <p class="text-description">No more wait times. No more hassle. Do your laundry at ease with Mercado Escolar.</br>
-          Your one-stop solution for getting your clothes washed, dried , ironed and delivered at your doorstep.</p>
+        <p class="font-oswald text-header">Sell or Buy products in no time.</p>
+        <p class="text-description">No more waiting. No more struggle. Sell or Buy your products at ease with Mercado Escolar.</br>
+          Your one-stop solution for selling products, purchasing products, posting advertisements, joining clubs and much more.</p>
       </div>
     </div>
 
     <!-- Info section below header -->
     <div class="d-flex flex-direction-row justify-around info-link">
       <p>
-        <span class="font-oswald text-header"> We Wash, Dry and Iron your clothes</span></br></br>
-        <span class="about-description">Care and quality are the core values of Mercado Escolar dry cleaning and laundry
-          service.</br>
-          Our mission is to provide consistent, quality clothing care with a level of service that exceeds your
+        <span class="font-oswald text-header"> We help you sell, buy products and also post advertisements </span></br></br>
+        <span class="about-description">Ease and quality are the core values of Mercado Escolar .</br>
+          Our mission is to provide convinence, effortless shopping experience with a level of service that exceeds your
           expectations</span></br>
-        </br><a href="./src/About/about.html" class="services-link">Read more about us <img class="arrow-right"
+        </br><a href="./src/About/about.html" class="services-link"> Click here to read more about us <img class="arrow-right"
             src="./assets/images/arrow-right-white.png"></a>
       </p>
       <img src="./assets/images/laundry-women.png">
@@ -103,7 +102,7 @@
       <img src="./assets/images/pickup-delivery.png">
       <p>
         <span class="font-oswald text-header">
-          And the cherry on top </br> We do Pickup / Delivery </span></br></br>
+          And the cherry on top </br> You can view posts, products and advertisements with one click </span></br></br>
         <a class="services-link" href="./src/Services/services.html">Explore our Services <img class="arrow-right"
             src="./assets/images/arrow-right-white.png"></a>
       </p>
@@ -115,7 +114,7 @@
       <div class="slides fade w-100">
         <div class="carousel d-flex align-items-center justify-around">
           <span>
-            <p class="text-header font-damion offer-info">Flat 20% off</p> <span class="font-oswald"> first time
+            <p class="text-header font-damion offer-info">View offers</p> <span class="font-oswald"> first time
               customers only. Terms & Condtions apply.</span>
           </span>
           <img src="./assets/images/special-offer.png" height="280px" width="280px">
