--- a/src/Services/services.html
+++ b/src/Services/services.html
@@ -73,44 +73,44 @@
     <div class="font-oswald heading"> Services </div>
   </div>
 <div class="flex-container">
-  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:30%;"> 
-    <div class="responsive"><img src="../../assets/images/laundry.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
-    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Service 1.</p></div>
-    <div class="services-text"><p >services are listed here</br>
-      Your .</p></div>
+  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:32%;"> 
+    <div class="responsive"><img src="../../assets/images/posts.gif"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Post.</p></div>
+    <div class="services-text"><p >Content can be shared using Mercado Escolar services among the community and help's in building socio-relationships with your 
+      audience when they engage with your posts</p></div>
   </div>
-  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:30%;"> 
-    <div class="responsive"><img src="../../assets/images/laundry-women.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
-    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Service 2</p></div>
-    <div class="services-text"><p >Care and quality are the core values of Mercado Escolar dry cleaning and laundry
-      service.</br>
-      Our mission is to provide consistent, quality clothing care with a level of service that exceeds your
-      expectations</p></div>
+  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:32%;"> 
+    <div class="responsive"><img src="../../assets/images/adv.gif"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Advertisement</p></div>
+    <div class="services-text"><p> Mercado Escolar provides advertisement services of communication in which a product, brand or service is promoted to a viewership in order to attract
+       interest, engagement, and sales .</p></div>
   </div>
-  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:30%;"> 
-    <div class="responsive"><img src="../../assets/images/pickup-delivery.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
-    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Service 3</p></div>
-    <div class="services-text"><p >Explore our Services</p></div>
+  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:32%;"> 
+    <div class="responsive"><img src="../../assets/images/clubs.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Clubs</p></div>
+    <div class="services-text"><p >Student clubs are a fundamental part of the diverse and dynamic community and Mercado Escolar provides wide range 
+      of leadership development and enhance collegiate experience </p></div>
   </div>
 </div>
 
+
 <div class="flex-container">
-  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:30%;"> 
-    <div class="responsive"><img src="../../assets/images/laundry.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
-    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Order 1.</p></div>
-    <div class="services-text"><p >order details</br>
-      Your .</p></div>
+  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:32%;"> 
+    <div class="responsive"><img src="../../assets/images/razer.jpg"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Razer Deathadder gaming mouse</p></div>
+    <div class="services-text"><p >Faster, durable and enrichng mouse experience at your fingertips at $14.99</br>
+      </p></div>
   </div>
-  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:30%;"> 
-    <div class="responsive"><img src="../../assets/images/laundry-women.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
-    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Order 2</p></div>
-    <div class="services-text"><p >order details.</br>
-      Market place</p></div>
+  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:32%;"> 
+    <div class="responsive"><img src="../../assets/images/radio.jpg"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Portable CD Player </p></div>
+    <div class="services-text"><p >Redefine music experience with portability at just $12.99 </br>
+      </p></div>
   </div>
-  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:30%;"> 
-    <div class="responsive"><img src="../../assets/images/pickup-delivery.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
-    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Order 3</p></div>
-    <div class="services-text"><p >order 3 details</p></div>
+  <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:32%;"> 
+    <div class="responsive"><img src="../../assets/images/cdc.jpg"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Cracking the Coding Interview Book</p></div>
+    <div class="services-text"><p>Unlock your true potential at $19.99</p></div>
   </div>
 </div>
 
