--- a/src/Services/services.html
+++ b/src/Services/services.html
@@ -96,19 +96,19 @@
 
 <div class="flex-container">
   <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:32%;"> 
-    <div class="responsive"><img src="../../assets/images/razer.jpg"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="responsive"><a href="../../src/authentication/authentication.html"><img src="../../assets/images/razer.jpg"  style='height: 100%; width: 100%; object-fit: contain'/></a></div>
     <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Razer Deathadder gaming mouse</p></div>
     <div class="services-text"><p >Faster, durable and enrichng mouse experience at your fingertips at $14.99</br>
       </p></div>
   </div>
   <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:32%;"> 
-    <div class="responsive"><img src="../../assets/images/radio.jpg"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="responsive"><a href="../../src/authentication/authentication.html"><img src="../../assets/images/radio.jpg"  style='height: 100%; width: 100%; object-fit: contain'/></a></div>
     <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Portable CD Player </p></div>
     <div class="services-text"><p >Redefine music experience with portability at just $12.99 </br>
       </p></div>
   </div>
   <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:32%;"> 
-    <div class="responsive"><img src="../../assets/images/cdc.jpg"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="responsive"><a href="../../src/authentication/authentication.html"><img src="../../assets/images/cdc.jpg"  style='height: 100%; width: 100%; object-fit: contain'/></a></div>
     <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Cracking the Coding Interview Book</p></div>
     <div class="services-text"><p>Unlock your true potential at $19.99</p></div>
   </div>
