--- a/src/Manager/manager.html
+++ b/src/Manager/manager.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
     <!-- Add title and favicon -->
-    <title>InstaWash</title>
+    <title>Mercado Escolar</title>
     <link rel="icon" href="./assets/images/outline_local_laundry_service_white_24dp.png" type="image/x-icon">
 </head>
 
