--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
   <!-- Add title and favicon -->
   <title>Mercado Escolar</title>
-  <link rel="icon" href="./assets/images/outline_local_laundry_service_white_24dp.png" type="image/x-icon">
+  <link rel="icon" href="C:\Users\Neeharika Kosana\Documents\wdm\wdm_phase2-1\assets\images" type="image/x-icon">
 </head>
 
 <body class="d-flex flex-direction-column">
@@ -84,9 +84,9 @@
 
   
   <section>
-    <!-- header seaction describing Mercado Escolar -->
+    <!-- header section describing Mercado Escolar -->
     <div class="poster d-flex justify-around">
-      <img src="./assets/images/laundry.png" height="400" width="400">
+      <img src="./assets/images/1.png" height="400" width="400">
       <div class="d-flex flex-direction-column justify-center">
         <p class="font-oswald text-header">Sell or Buy products in no time.</p>
         <p class="text-description">No more waiting. No more struggle. Sell or Buy your products at ease with Mercado Escolar.</br>
@@ -102,13 +102,13 @@
           Our mission is to provide convinence, effortless shopping experience with a level of service that exceeds your
           expectations</span></br>
         </br><a href="./src/About/about.html" class="services-link"> Click here to read more about us <img class="arrow-right"
-            src="./assets/images/arrow-right-white.png"></a>
+            src="./assets/images/2.png"></a>
       </p>
       <img src="./assets/images/laundry-women.png">
     </div>
     <hr class="page-break">
     <div class="d-flex flex-direction-row justify-around info-link">
-      <img src="./assets/images/pickup-delivery.png">
+      <img src="./assets/images/Advertise.jpg">
       <p>
         <span class="font-oswald text-header">
           And the cherry on top </br> You can view posts, products and advertisements with one click </span></br></br>
@@ -132,27 +132,25 @@
 
       <div class="slides fade w-100">
         <div class="carousel review-content d-flex justify-around">
-          <div class="font-oswald d-flex flex-direction-column justify-center">Pricing</div>
+          <div class="font-oswald d-flex flex-direction-column justify-center">Post an advertisement</div>
           <div class="font-oswald d-flex flex-direction-column justify-evenly price-listing font-roboto">
-            <span>Washing: &ensp; 2$ per pound</span>
-            <span>Drying: &ensp; 2$ per pound</span>
-            <span>Ironing: &ensp; 4$ per pound</span>
+            <span>Product advertisement: &ensp; 20$ </span>
+            <span>Club advertisement: &ensp; 10$ </span>
+            <span>Website advertisement: &ensp; 40$ </span>
           </div>
           <div class="font-oswald d-flex flex-direction-column justify-evenly font-roboto">
-            <span>Pickup: &ensp; 1.75$</span>
-            <span>Delivery: &ensp; 1.75$</span>
-            <span>Late Services: &ensp; 15% additional cost</span>
+            <span>Offers advertisement: &ensp; 15$</span>
+            <span>Event advertisement: &ensp; 25$</span>
+            <span>Service advertisement: &ensp; 30$</span>
           </div>
         </div>
       </div>
 
       <div class="slides fade w-100">
         <div class="carousel review-content d-flex flex-direction-column">
-          <div class="font-oswald d-flex justify-center">Customer Reviews</div>
-          <div class="customer-review d-flex w-100"><span>Jacob<img src="./assets/images/4stars.png"></span>
-            <span>Alan<img src="./assets/images/5stars.png"></span></div>
-          <div class="customer-review d-flex w-100"><span>Maria<img src="./assets/images/4andhalfstars.png"></span>
-            <span>Diaz<img src="./assets/images/3andhalfstars.png"></span></div>
+          <div class="font-oswald d-flex justify-center">Join the club</div>
+          <div class="customer-review d-flex w-100"><span>UTA Radio<img src="./assets/images/uta-radio.png" height="280px" width="280px"></span>
+            <span>Maverick Mentors<img src="./assets/images/maverick-mentors.png" height="280px" width="280px"></span></div>
         </div>
       </div>
 
