--- a/src/About/about.html
+++ b/src/About/about.html
@@ -72,23 +72,20 @@
   </header>
   <div class="container">
     <div class="font-oswald headings" style="margin-top: 0%;"> Welcome to <br/>Mercado Escolar</div>
-    <div style="margin-left: 10%;padding-left: 30px;"><p>No more wait times. No more hassle. Do your laundry at ease with Mercado Escolar.</br>
-        Your one-stop solution for getting your clothes washed, dried , ironed and delivered at your doorstep</p></div>
+    <div style="margin-left: 10%;padding-left: 30px;"><p>No more waiting. No more struggle. Sell or Buy your products at ease with Mercado Escolar.</br>
+      Your one-stop solution for selling products, purchasing products, posting advertisements, joining clubs and much more.</p></div>
         <div style="margin-left: 10%;padding-left: 30px;"><button class=" learn-btn">Learn More</button></div>
     </div>
     <div>
        <h1 class="side-Heading">About Mercado Escolar</h1>
        <div class="about-content">
          <p>
-          Insta Wash is a start up Laudry Management Company with two branches one in Arlington, Texas and one in Dallas, Texas.
-          We are planning to expand our business to other states in the US. 
+          Mercado Escolar/ Marketplace is a start up Online Shopping Management Company with two branches one in Arlington, Texas and one in Irving, Texas.
+          We are planning to expand our business to other cities in the Texas. 
           <p>
-            The Main Philosophy of Mercado Escolar is to provide quality service to our customers. At Insta Wash we provide various services to our customers which will help them to do laundry at the comfort of their home. Look into our service page for more information regarding the service provided at Insta Wash.
+            The Main Philosophy of Mercado Escolar is to provide quality service to our customers. At Mercado Escolar we provide various services to our customers which will help them buy or sell products with one click. Look into our services page for more information regarding the services we provide.
           </p>
-          <p>
-            The Equipement used at our Mercado Escolar are state of the art machine. This allows us to provide cutomers the best overall laundry service with customization for each and every item.
-          </p>
-          <b> Our Motto at Mercado Escolar : No task is too difficult, no request too demanding. We rise to the challenge, day by day and year after year. </b>
+          <b> Our Motto at Mercado Escolar : No task is too difficult, no request is too demanding. We rise to the challenge, day by day and year after year. </b>
         </p>
       </div>
     </div>
