added super admin and school admin to the login page

--- a/index.html
+++ b/index.html
@@ -101,10 +101,9 @@
         <span class="about-description">Ease and quality are the core values of Mercado Escolar .</br>
           Our mission is to provide convinence, effortless shopping experience with a level of service that exceeds your
           expectations</span></br>
-        </br><a href="./src/About/about.html" class="services-link"> Click here to read more about us <img class="arrow-right"
-            src="./assets/images/2.png"></a>
+        </br><a href="./src/About/about.html" class="services-link"> Click here to read more about us <img class="arrow-right" src="./assets/images/2.png"></a>
       </p>
-      <img src="./assets/images/laundry-women.png">
+      <img src="./assets/images/2.png">
     </div>
     <hr class="page-break">
     <div class="d-flex flex-direction-row justify-around info-link">
