--- a/src/Super Admin/Super Admin.html
+++ b/src/Super Admin/Super Admin.html
@@ -5,7 +5,7 @@
     <!-- Import local css/ JS files -->
     <link href="./Super Admin.css" rel="stylesheet" type="text/css">
     <link href="../themes/dark.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="./manager.js"></script>
+    <script type="text/javascript" src="./Supad.js"></script>
 
     <!-- import font packages -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
