payment and cart changes

--- a/index.html
+++ b/index.html
@@ -47,13 +47,10 @@
             
             </div>
             <a href="./src/Payment/payment.html">
-          <i class="fa fa-shopping-basket fa-2x" aria-hidden="true"></i></a>
+              <i class="fa fa-shopping-basket fa-2x" aria-hidden="true"></i>
+            </a>
            </div>
         </li>
-       <!-- <form class="form-inline search-control  d-flex align-items-center">
-          <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn" type="submit">Search</button>
-        </form> -->
       </ul>
     </nav>
   </header>
