--- a/src/Payment/payment.html
+++ b/src/Payment/payment.html
@@ -37,10 +37,16 @@
         <li class="nav-item">
           <a class="nav-link" href="../authentication/authentication.html">Login/Register</a>
         </li>
-        <form class="form-inline search-control my-2 my-lg-0 d-flex align-items-center">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        <li>
+            <div id="tray">
+              <div class="count">
+              
+              </div>
+              <a href="./src/Payment/payment.html">
+                <i class="fa fa-shopping-basket fa-2x" aria-hidden="true"></i>
+              </a>
+            </div>
+        </li>
       </ul>
     </nav>
   </header>
@@ -92,11 +98,11 @@
               <div class="row">
                 <div class="col-50">
                   <label for="state">State</label>
-                  <input type="text" id="state" name="state" placeholder="NY">
+                  <input type="text" id="state" name="state" placeholder="Enter State">
                 </div>
                 <div class="col-50">
-                  <label for="zip">Zip</label>
-                  <input type="text" id="zip" name="zip" placeholder="10001">
+                  <label for="zip">Zip Code</label>
+                  <input type="text" id="zip" name="zip" placeholder="Enter Zip Code">
                 </div>
               </div>
             </div>
@@ -111,19 +117,19 @@
                 <i class="fa fa-cc-discover" style="color:orange;"></i>
               </div>
               <label for="cname">Name on Card</label>
-              <input type="text" id="cname" name="cardname" placeholder="John More Doe">
+              <input type="text" id="cname" name="cardname" placeholder="Enter Cardholder Name">
               <label for="ccnum">Credit card number</label>
-              <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
+              <input type="text" id="ccnum" name="cardnumber" placeholder="Enter 16-digit card number">
               <label for="expmonth">Exp Month</label>
-              <input type="text" id="expmonth" name="expmonth" placeholder="September">
+              <input type="text" id="expmonth" name="expmonth" placeholder="Enter expiry month">
               <div class="row">
                 <div class="col-50">
                   <label for="expyear">Exp Year</label>
-                  <input type="text" id="expyear" name="expyear" placeholder="2018">
+                  <input type="text" id="expyear" name="expyear" placeholder="Enter expiry year">
                 </div>
                 <div class="col-50">
                   <label for="cvv">CVV</label>
-                  <input type="text" id="cvv" name="cvv" placeholder="352">
+                  <input type="text" id="cvv" name="cvv" placeholder="Enter CVV">
                 </div>
               </div>
             </div>
@@ -137,14 +143,39 @@
       </div>
     </div>
     <div class="col-25">
-      <div class="container">
-        <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>4</b></span></h4>
-        <p><a href="#">Product 1</a> <span class="price">$15</span></p>
-        <p><a href="#">Product 2</a> <span class="price">$5</span></p>
-        <p><a href="#">Product 3</a> <span class="price">$8</span></p>
-        <p><a href="#">Product 4</a> <span class="price">$2</span></p>
-        <hr>
-        <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
+      <div class="Cart">
+        <div class="Cart-Container">
+            <div class="Header">
+                <h3 class="Heading">Shopping Cart</h3>
+                <h5 class="Action">Remove all</h5>
+            </div>
+            <div class="Cart-Items">
+                <div class="image-box">
+                <img src="images/apple.png" style="height:120px" />
+                </div>
+                <div class="about">
+                <h1 class="title">Apple Juice</h1>
+                <h3 class="subtitle">250ml</h3>
+                <img src="images/veg.png" style="height:30px"/>
+                </div>
+                <div class="counter"></div>
+                <div class="prices"></div>
+            </div>
+            <div class="prices">
+                <div class="amount">$2.99</div>
+                <div class="save"><u>Save for later</u></div>
+                <div class="remove"><u>Remove</u></div>
+                <hr>
+                <div class=”checkout”>
+                    <div class=”total”>
+                    <div>
+                    <div class=”Subtotal”>Sub-Total</div>
+                    <div class=”items”>2 items</div>
+                    </div>
+                    <div class=”total-amount”>$6.18</div>
+                </div>
+            </div>
+        </div>
       </div>
     </div>
   </div>
