--- a/src/authentication/authentication.html
+++ b/src/authentication/authentication.html
@@ -81,7 +81,8 @@
       <form class="d-flex flex-direction-column w-100" method="post" enctype="text/html">
         <div class="d-flex flex-direction-column">
           <input type="email" id="email" name="email" placeholder="Username / Email">
-          <input type="password" id="password" name="password" placeholder="Password">
+          <input type="password" id="password" name="password" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
+          title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
         </div>
         <div class="d-flex flex-direction-column align-items-center">
           <button class="btn login-btn" type="submit" onclick="login(email)">Sign in</button>
@@ -127,7 +128,8 @@
             <input type="text" class="name-input" id="lname" name="lname" placeholder="Last Name">
           </div>
           <input type="email" id="email" name="email" placeholder="Email">
-          <input type="password" id="password" name="password" placeholder="Password">
+          <input type="password" id="password" name="password" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
+          title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
           <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password">
         </div>
         <div class="d-flex flex-direction-column align-items-center">
