--- a/src/Payment/payment.html
+++ b/src/Payment/payment.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
   <!-- Add title and favicon -->
-  <title>InstaWash</title>
+  <title>Mercado Escalor</title>
   <link rel="icon" href="./assets/images/outline_local_laundry_service_white_24dp.png" type="image/x-icon">
 </head>
 
@@ -151,18 +151,17 @@
             </div>
             <div class="Cart-Items">
                 <div class="image-box">
-                <img src="images/apple.png" style="height:120px" />
+                <img src="images/Harry.png" style="height:30px" />
                 </div>
                 <div class="about">
-                <h1 class="title">Apple Juice</h1>
-                <h3 class="subtitle">250ml</h3>
+                <h1 class="title">Book</h1>
                 <img src="images/veg.png" style="height:30px"/>
                 </div>
                 <div class="counter"></div>
                 <div class="prices"></div>
             </div>
             <div class="prices">
-                <div class="amount">$2.99</div>
+                <div class="amount">$18.99</div>
                 <div class="save"><u>Save for later</u></div>
                 <div class="remove"><u>Remove</u></div>
                 <hr>
@@ -172,7 +171,7 @@
                     <div class=”Subtotal”>Sub-Total</div>
                     <div class=”items”>2 items</div>
                     </div>
-                    <div class=”total-amount”>$6.18</div>
+                    <div class=”total-amount”>$18.99</div>
                 </div>
             </div>
         </div>
