--- a/src/ContactUs/contactUs.html
+++ b/src/ContactUs/contactUs.html
@@ -78,12 +78,13 @@
         <form class="d-flex flex-direction-column w-100" action="admin@Mercado Escolar.com" method="post"
           enctype="text/plain">
           <div class="d-flex flex-direction-row mediaPhone">
-            <input type="text" id="fname" name="fname" placeholder="First Name" required>
-            <input type="text" id="lname" name="lname" placeholder="Last Name" required>
+            <input type="text" id="fname" name="fname" placeholder="Enter Full Name" required>
           </div>
           <div class="d-flex flex-direction-row mediaPhone">
-            <input type="text" id="email" name="email" placeholder="E-mail" required>
-            <input type="text" id="PhoneNumber" name="PhoneNumber" placeholder="Phone Number" required>
+            <input type="text" id="email" name="email" placeholder="Enter Email" required>
+          </div>
+          <div class="d-flex flex-direction-row mediaPhone">
+            <input type="text" id="PhoneNumber" name="PhoneNumber" placeholder="Enter Phone Number" required>
           </div>
           <div class="d-flex flex-direction-row mediaPhone">
             <textarea id="query" class="font-roboto" name="query" placeholder="Enter your query" required></textarea>
