--- a/src/Services/services.html
+++ b/src/Services/services.html
@@ -37,6 +37,16 @@
         <li class="nav-item">
           <a class="nav-link" href="../authentication/authentication.html">Login/Register</a>
         </li>
+        <li>
+          <div id="tray">
+            <div class="count">
+            
+            </div>
+            <a href="../Payment/payment.html">
+              <i class="fa fa-shopping-basket fa-2x" aria-hidden="true"></i>
+            </a>
+          </div>
+        </li>
       </ul>
     </nav>
   </header>
