--- a/src/Services/services.html
+++ b/src/Services/services.html
@@ -74,19 +74,19 @@
   </div>
 <div class="flex-container">
   <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:32%;"> 
-    <div class="responsive"><img src="../../assets/images/posts.gif"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="responsive"><a href="../../src/authentication/authentication.html"><img src="../../assets/images/posts.gif"  style='height: 100%; width: 100%; object-fit: contain'/></a></div>
     <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Post.</p></div>
     <div class="services-text"><p >Content can be shared using Mercado Escolar services among the community and help's in building socio-relationships with your 
       audience when they engage with your posts</p></div>
   </div>
   <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:32%;"> 
-    <div class="responsive"><img src="../../assets/images/adv.gif"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="responsive"><a href="../../src/authentication/authentication.html"><img src="../../assets/images/adv.gif"  style='height: 100%; width: 100%; object-fit: contain'/></a></div>
     <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Advertisement</p></div>
     <div class="services-text"><p> Mercado Escolar provides advertisement services of communication in which a product, brand or service is promoted to a viewership in order to attract
        interest, engagement, and sales .</p></div>
   </div>
   <div class="inner-flex-container" style="background-color:#3e3e3e;max-width:32%;"> 
-    <div class="responsive"><img src="../../assets/images/clubs.png"  style='height: 100%; width: 100%; object-fit: contain'/></div>
+    <div class="responsive"><a href="../../src/authentication/authentication.html"><img src="../../assets/images/clubs.png"  style='height: 100%; width: 100%; object-fit: contain'/></a></div>
     <div class="services-heading"><p class="font-oswald" style="font-size: 1.5rem;">Clubs</p></div>
     <div class="services-text"><p >Student clubs are a fundamental part of the diverse and dynamic community and Mercado Escolar provides wide range 
       of leadership development and enhance collegiate experience </p></div>
