--- a/src/BusinessOwner/businessOwner.html
+++ b/src/BusinessOwner/businessOwner.html
@@ -28,7 +28,7 @@
         <nav class="navbar">
             <ul class="d-flex justify-around flex-direction-row">
                 <li class="nav-item">
-                    <a class="nav-link" href="../School Admin/Report.html">Reports and Insights</a>
+                    <a class="nav-link" href="../BusinessOwner/Report.html">Reports and Insights</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" id="active-nav" href="#">Business Owner</a>
@@ -112,7 +112,7 @@
                 <!-- Manual Order table -->
                 <div class="d-flex flex-direction-column align-items-start section-content"><span
                         class="font-oswald section-header">Manage Orders</span>
-                        <div class="table-container">
+                        <div class="order-section">
                             <table id="tasks-table" class="material-table">
                                 <tr>
                                     <th>Order Id</th>
@@ -122,7 +122,7 @@
                                     <th>Ordered From</th>
                                     <th>Payment</th>
                                     <th class="text-align-center"><img class="cursor-pointer" title="Add Record"
-                                            onclick="addTasks()" src="../../assets/images/plus.png" height="13px"
+                                            onclick="" src="../../assets/images/plus.png" height="13px"
                                             width="13px"></th>
                                 </tr>
                             </table>
