--- a/src/ContactUs/contactUs.html
+++ b/src/ContactUs/contactUs.html
@@ -81,7 +81,7 @@
             <input type="text" id="fname" name="fname" placeholder="Enter Full Name" required>
           </div>
           <div class="d-flex flex-direction-row mediaPhone">
-            <input type="text" id="email" name="email" placeholder="Enter Email" required>
+            <input type="text" id="email" name="email" placeholder="Enter Email" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required >
           </div>
           <div class="d-flex flex-direction-row mediaPhone">
             <input type="text" id="PhoneNumber" name="PhoneNumber" placeholder="Enter Phone Number" required>
