--- a/src/Payment/payment.html
+++ b/src/Payment/payment.html
@@ -139,7 +139,7 @@
             </div>
             <div class="Cart-Items">
                 <div class="image-box">
-                <img src="./assets/images/1.png" style="height:120px" />
+                <img src="../../assets/images/radio.jpg" style="height:120px" />
                 </div>
                 <div class="about">
                 <h1 class="title">Product 1</h1>
@@ -153,7 +153,7 @@
             </div>
             <div class="Cart-Items">
                 <div class="image-box">
-                <img src="./assets/images/1.png" style="height:120px" />
+                <img src="../../assets/images/radio.jpg" style="height:120px" />
                 </div>
                 <div class="about">
                 <h1 class="title">Product 2</h1>
