adding users to sign in page

--- a/src/School Admin/School Admin.html
+++ b/src/School Admin/School Admin.html
@@ -82,7 +82,7 @@
                             <tbody>
                                 <tr>
                                     <th>Student Id</th>
-                                    <th>Studnet Name</th>
+                                    <th>Student Name</th>
                                     <th>School Name</th>
                                     <th>Phone</th>
                                     <th>Email</th>
