--- a/src/About/about.html
+++ b/src/About/about.html
@@ -80,10 +80,10 @@
     <div class="font-oswald headings" style="margin-top: 0%;"> Welcome to <br/>Mercado Escolar</div>
     <div style="margin-left: 10%;padding-left: 30px;"><p>No more waiting. No more struggle. Sell or Buy your products at ease with Mercado Escolar.</br>
       Your one-stop solution for selling products, purchasing products, posting advertisements, joining clubs and much more.</p></div>
-        <div style="margin-left: 10%;padding-left: 30px;"><button class=" learn-btn">Learn More</button></div>
+        <div style="margin-left: 10%;padding-left: 30px;"><button class=" learn-btn"><a href="#learn">Learn More</a></button></div>
     </div>
     <div>
-       <h1 class="side-Heading">About Mercado Escolar</h1>
+       <h1 class="side-Heading" id="learn">About Mercado Escolar</h1>
        <div class="about-content">
          <p>
           Mercado Escolar/ Marketplace is a start up Online Shopping Management Company with two branches one in Arlington, Texas and one in Irving, Texas.
