--- a/src/School Admin/School Admin.html
+++ b/src/School Admin/School Admin.html
@@ -33,6 +33,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" id="active-nav" href="#">School Admin</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../authentication/authentication.html">Sign out</a>
+                </li>
             </ul>
         </nav>
     </header>
