chat and changes

--- a/src/Student/student.html
+++ b/src/Student/student.html
@@ -36,6 +36,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" id="active-nav" href="#">Home</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link"  href="../Chat/chat.html">Chat</a>
+                </li>
             </ul>
         </nav>
     </header>
