--- a/src/Super Admin/Super Admin.html
+++ b/src/Super Admin/Super Admin.html
@@ -34,6 +34,9 @@
                     <a class="nav-link" id="active-nav" href="#">Super Admin</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link"  href="../Chat/chat.html">Chat</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="../authentication/authentication.html">Sign out</a>
                 </li>
             </ul>
