sign out student

--- a/src/Student/student.html
+++ b/src/Student/student.html
@@ -39,6 +39,9 @@
                 <li class="nav-item">
                     <a class="nav-link"  href="../Chat/chat.html">Chat</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../authentication/authentication.html">Sign out</a>
+                </li>
             </ul>
         </nav>
     </header>
